--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
 	background-color:white;
 	background-image:url(images/background.jpg);
 	background-repeat:no-repeat;
+	background-position: top;
+	margin:0;
 	text-align:center;
 }
 
