--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a:hover{
 	color : #ff80ff;
 }
 
-.navbar, ul {
+.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -55,53 +55,68 @@ a:hover{
     width: 100%;
 }
 
-.navbar, li {
+.navbar li {
 	float: left;
 }
 
-.navbar li a {
-	display: block;
+.navbar li a, .dropbtn{
+	display: inline-block;
 	color: white;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 }
 
-.navbar li a:hover {
+.navbar li a:hover, .dropdown:hover .dropbtn {
 	background-color: #111;
 }
 
-.active {
-    background-color: #4CAF50;
+li.dropdown {
+	display: inline-block;
 }
 
-
 .dropdown_menu {
-	display: none;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown_menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown_menu a:hover {
+	background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown_menu {
+    display: block;
+}
+
+.active {
+	background-color: #4CAF50;
 }
 
 .footer
 {
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    height: 45px;
-    margin: 0px;
-    opacity: 0.9;
-	 padding: 5px;
-    background-color: #333;
+   position: fixed;
+   left: 0px;
+   right: 0px;
+   bottom: 0px;
+   height: 45px;
+   margin: 0px;
+   opacity: 0.9;
+	padding: 5px;
+   background-color: #333;
 }
 
 .footer span {
 	color: white;
-}
-
-#menu1{
-	width:70%;
-	display:table;
-}
-
-#menu1 li{
-	display:table-cell;
 }
