--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
 	width:100%;
 	color:black;
-	background-image:url(Vue/images/background.jpg);
+	background-image:url(images/background.jpg);
 	background-repeat:no-repeat;
 	background-position: top;
 	margin:0;
@@ -57,6 +57,7 @@ li a, .dropbtn {
     padding: 14px 16px;
     text-decoration: none;
 		font-size: 28px;
+		font-family: Calibri;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
