--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ div span p{
 	font-family: Arial;
 }
 
+.contenu{
+	background-color: black;
+	opacity: 0.9;
+	border-radius: 20px;
+	margin-left:100px;
+	margin-right:100px;
+	margin-top: 80px;
+	padding:20px;
+	color: white;
+}
+
 address{
 	font-size:12px;
 	font-style:italic;
@@ -44,10 +55,12 @@ ul {
 
 li {
     float: left;
+		margin: 0px;
 }
 
 #logo {
 		margin-right: 20px;
+		margin-left: 20px;
 }
 
 li a, .dropbtn {
