Avancement formulaire contact
avancement formulaire contact et suppresion 'Admin' dans navbar

--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ li.dropdown {
     display: inline-block;
 }
 
+li .active{
+    background-color: darkgreen;
+}
+
 .dropdown_menu {
     display: none;
     position: absolute;
