--- a/style.css
+++ b/style.css
@@ -28,15 +28,21 @@ div span p{
 	font-family: Arial;
 }
 
+span {
+	margin: 20px 40px 20px 50px;
+}
+
 .contenu{
 	background:rgba(0,0,0,0.9);
 	border-radius: 20px;
-	margin-left:100px;
-	margin-right:100px;
+	margin-left:5%;
+	margin-right:5%;
 	margin-top: 80px;
 	margin-bottom: 15px;
 	padding:20px;
 	color: white;
+	display: block;
+	min-width: 250px;
 }
 
 .arrondie{
@@ -55,6 +61,7 @@ div span p{
 	background-repeat:no-repeat;
 	opacity:2;
 }
+
 
 address{
 	font-size:12px;
@@ -135,11 +142,13 @@ li .active{
 
 .footer
 {
-    position: fixed;
+    /*position: fixed;
     margin-top:15px;
     bottom:0;
     left:0;
-    right:0;
+    right:0;*/
+	width: 100%;
+	margin: auto;
     height: 45px;
     opacity: 0.9;
     padding: 5px;
