--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 /* FICHIER CSS */
+html {
+	height: 100%;
+}
 
 body{
+	position: relative;
+	display: inline-block;
 	width:100%;
 	color:black;
+	background-color: rgb(190, 197, 202);
 	background-image:url(images/background.jpg);
 	background-repeat:no-repeat;
 	background-position: top;
+	background-size: cover;
 	margin:0;
 	text-align:center;
+	min-height: 100%;
 }
 
 h1{
@@ -85,6 +93,8 @@ li {
 #logo {
     margin-right: 20px;
     margin-left: 20px;
+	width: 64px;
+	height: 64px;
 }
 
 li a, .dropbtn {
@@ -142,21 +152,21 @@ li .active{
 
 .footer
 {
-    /*position: fixed;
-    margin-top:15px;
-    bottom:0;
-    left:0;
-    right:0;*/
+	position: absolute;
+	bottom: 0px;
 	width: 100%;
-	margin: auto;
-    height: 45px;
+	/*margin: auto;
+    height: auto;*/
     opacity: 0.9;
     padding: 5px;
     background-color: #333;
+	text-align: left;
 }
 
 .footer span {
 	color: white;
+	font-size: 20px;
+	font-family: Arial;
 }
 
 * {
@@ -243,4 +253,16 @@ li .active{
 
 .active, .demo:hover {
 	opacity: 1;
+}
+
+/* Mise en page form Contact*/
+#contact {
+	margin: 20px;
+}
+
+fieldset {
+	border-radius: 20px;
+	font-size: 20px;
+	font-family: Arial;
+	margin: 20px;
 }
