--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 h1{
-	font-size: 20px;
+	font-size: 22px;
 	width: 100%;
 	text-align: center;
 }
@@ -153,6 +153,7 @@ li .active{
 	right: 0px;
 	top: 0px;
 	margin: 0px;
+	z-index: 2;
 }
 
 .footer
@@ -239,29 +240,32 @@ li .active{
 	opacity: 1;
 }
 
-/* Page planning */
-#planning {
-	align: center;
-	border: 5px solid ;
-	border-spacing: 0;
-	border-color: grey;
-	width: 70%;
-	font-size: 20px;
-	margin: auto;
-	margin-bottom: 10px;
+/*Mise en page Evenements*/
+.noteEvenement {
+	display: inline-flex;
+	  position: relative;
 }
 
-th {
-	background-color: grey;
+.note {
+	  color: #333;
+	  position: relative;
+	  width: 300px;
+	  margin: 0 auto;
+	  margin: 20px;
+	  padding: 20px;
+	  font-family: Satisfy;
+	  font-size: 22px;
+	  box-shadow: 0 10px 10px 2px rgba(0,0,0,1);
 }
 
-td {
-	border: 1px solid;
-	padding: 20px;
-	border-color: white;
+.verte {
+	background: #eae672;
+	-webkit-transform: rotate(2deg);
+	-moz-transform: rotate(2deg);
+	-o-transform: rotate(2deg);
+	-ms-transform: rotate(2deg);
+	transform: rotate(2.5deg);
 }
-
-
 /* Mise en page form Contact*/
 #contact {
 	margin: 30px;
