Correction pb + debut menu hamburger

--- a/plannStyle.css
+++ b/plannStyle.css
@@ -7,7 +7,13 @@
 	width: 70%;
 	font-size: 20px;
 	margin: auto;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
+}
+
+.contenu {
+	margin-top: 90px;
+	margin-bottom: 90px;
+	min-width: 800px;
 }
 
 th {
