--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+	display: inline-block;
 }
 
 li {
@@ -152,20 +152,40 @@ li .active{
     display: block;
 }*/
 
-.navbar{
+nav {
 	position:fixed;
 	left: 0px;
 	right: 0px;
 	top: 0px;
 	margin: 0px;
 	z-index: 2;
+	background-color: #333;
 }
 
 /* meu Hamburger */
-@media only screen and (min-width: 320px) and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
   .navbar {
-	  
+	  position: relative;
+	  display:block;
+	  float: left;
+	  width: 100px;
+	  height: 63px;
+	  cursor: pointer;
+	  background-color: red;
   }
+
+  .navbar::before{
+	  content:'COco';
+	  position: absolute;
+	  display: block;
+	  width: 1rem;
+	  height: 0;
+	  top: 16px;
+	  left : 15px;
+	  @include box-shadow(0 10px 1px red, 0 16px 0 1px red, 0 22px 0 1px red);
+  }
+
+
 }
 
 .footer
