--- a/style.css
+++ b/style.css
@@ -129,29 +129,6 @@ li .active{
     background-color: darkgreen;
 }
 
-/*.dropdown_menu {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown_menu a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown_menu a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown_menu {
-    display: block;
-}*/
-
 nav {
 	position:fixed;
 	left: 0px;
@@ -162,30 +139,35 @@ nav {
 	background-color: #333;
 }
 
+.hamb {
+	display: none;
+}
+
 /* meu Hamburger */
 @media only screen and (max-width: 900px) {
   .navbar {
-	  position: relative;
-	  display:block;
+	  position: static;
+	  display:none;
 	  float: left;
-	  width: 100px;
-	  height: 63px;
+	  width: 200px;
+	  height: auto;
 	  cursor: pointer;
-	  background-color: red;
+	  background-color: #333;
   }
 
-  .navbar::before{
-	  content:'COco';
-	  position: absolute;
-	  display: block;
-	  width: 1rem;
-	  height: 0;
-	  top: 16px;
-	  left : 15px;
-	  @include box-shadow(0 10px 1px red, 0 16px 0 1px red, 0 22px 0 1px red);
+  .hamb {
+      display: inline-block;
+      cursor: pointer;
+	  margin-bottom: 5px;
   }
 
 
+  .bar1, .bar2, .bar3 {
+	width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 2px 5px 8px 15px;
+  }
 }
 
 .footer
@@ -203,10 +185,6 @@ nav {
 	box-sizing: border-box;
 }
 
-/*  Ajoute un pointer au survol des thumbnails
-.cursor {
-	cursor: pointer;
-}*/
 
 /* Bouton precedent et suivant */
 .prev, .next {
@@ -272,7 +250,9 @@ nav {
 	opacity: 1;
 }
 
-/*Mise en page Evenements*/
+/**************************
+**Mise en page Evenements**
+***************************/
 .noteEvenement {
 	display: inline-flex;
 	  position: relative;
@@ -298,7 +278,11 @@ nav {
 	-ms-transform: rotate(2deg);
 	transform: rotate(2.5deg);
 }
-/* Mise en page form Contact*/
+
+
+/**********************************
+**Mise en page formulaire contact**
+**********************************/
 #contact {
 	margin: 30px;
 }
